k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trading
  labels:
    name: trading
    environment: production
